<resources>
    <string name="app_name">Wasp</string>
    <string name="new_account">Hesap Oluştur</string>
    <string name="start_account">Giriş Yap</string>
    <string name="name">Ad/Soyad</string>
    <string name="email">Email</string>
    <string name="sifre">Şifre</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sohbet_ekrani">SOHBET EKRANI</string>
    <string name="friends_ekrani">ARKADAŞLAR EKRANI</string>
    <string name="logout">Çıkış Yap</string>

    <!-- TODO: Remove or change this placeholder text -->


</resources>
