<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="30dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_welcomeApp"

        android:layout_centerHorizontal="true"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/txt_welcomeApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/baslik3"
        android:text="@string/app_name"
        android:textColor="@color/stringRengi"
        android:textSize="100dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnAccount"
        android:layout_marginBottom="30dp"
        android:background="@color/stringRengi"
        android:onClick="goToLogin"
        android:text="@string/start_account"
        android:textColor="@color/butonGiriş"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:background="@color/stringRengi"
        android:onClick="goToAccount"
        android:text="@string/new_account"
        android:textColor="@color/butonAktif"
        android:textStyle="bold" />


</RelativeLayout>